# entity-resolver

./: .gitignore  LICENSE  README.md  config.yaml  example_config.yaml  pyproject.toml  requirements.txt  setup.py  setup_colab.sh
entity_resolver/: __init__.py  address_processor.py  clusterer.py  components.py  context_vectorizer.py  merger.py  normalizer.py  persistence.py  predictor.py  refiner.py  reporter.py  resolver.py  scorer.py  validator.py  vectorizer.py
entity_resolver/config/: __init__.py  loader.py  schema.py
entity_resolver/utils/: __init__.py  address.py  clean_mem.py  clustering.py  embedding_streams.py  graph.py  matrix_ops.py  similarity.py  text.py  validation.py  vector.py
